<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    tools:context=".MainActivity"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:background="@color/white"
    android:layout_gravity="center_horizontal"
    >

    <TextView
        app:layout_constraintHorizontal_chainStyle="packed"
        android:id="@+id/label_bill"
        style="@style/LabelStyle"
        android:layout_marginTop="20dp"
        android:minWidth="120dp"
        android:text="@string/label_bill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/amount_bill"
        style="@style/InputStyle"
        android:layout_width="223dp"
        android:layout_height="58dp"
        android:hint="@string/amount_bill_hint"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/label_bill"
        app:layout_constraintTop_toTopOf="@id/label_bill" />
    <TextView
        android:id="@+id/label_tip_percent"
        style="@style/LabelStyle"
        android:layout_marginEnd="20dp"
        android:minWidth="120dp"
        app:layout_constraintStart_toStartOf="@+id/label_bill"
        app:layout_constraintTop_toBottomOf="@id/label_bill"
        android:text="@string/label_tip_percent"/>


    <EditText
        android:id="@+id/amount_tip_percent"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        style="@style/InputStyle"
        android:hint="@string/amount_tip_percent_hint"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/label_tip_percent"
        app:layout_constraintTop_toBottomOf="@id/amount_bill" />
    <!-- red line -->
    <View
        android:id="@+id/red_line"
        android:layout_below="@+id/label_tip_percent"
        android:layout_marginTop="20dp"
        android:layout_height="5dip"
        android:layout_width="match_parent"
        android:layout_alignStart="@id/label_bill"
        android:layout_alignEnd="@id/amount_bill"
        app:layout_constraintTop_toBottomOf="@id/label_tip_percent"
        android:background="#FF00" />
    <TextView
        android:layout_width="0dp"
        android:id="@+id/label_tip"
        style="@style/LabelStyle"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/red_line"
        app:layout_constraintEnd_toEndOf="@id/label_tip_percent"
        app:layout_constraintTop_toBottomOf="@id/red_line"
        android:text="@string/label_tip" />
    <TextView
        android:id="@+id/amount_tip"
        android:layout_width="0dp"
        style="@style/OutputStyle"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/red_line"
        app:layout_constraintStart_toEndOf="@id/label_tip"
        app:layout_constraintTop_toBottomOf="@id/red_line"/>
    <TextView
        android:id="@+id/label_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/LabelStyle"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/label_tip"
        app:layout_constraintTop_toBottomOf="@id/label_tip"
        app:layout_constraintEnd_toEndOf="@id/label_tip"
        android:text="@string/label_total" />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginTop="20dp"
        android:id="@+id/amount_total"
        style="@style/OutputStyle"
        app:layout_constraintEnd_toEndOf="@id/amount_tip"
        app:layout_constraintStart_toEndOf="@id/label_total"
        app:layout_constraintTop_toBottomOf="@id/amount_tip"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_calculator"
        android:text="@string/button_calculator"
        android:layout_marginTop="20dp"
        style="@style/ButtonStyle"
        app:layout_constraintStart_toStartOf="@id/label_total"
        app:layout_constraintTop_toBottomOf="@id/label_total"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>